--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -2,7 +2,7 @@
   <%= link_to I18n.t('sign_in.title'), new_session_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<%- if devise_mapping.registerable? && controller_name != 'account' %>
   <%= link_to I18n.t('sign_up.title'), new_registration_path(resource_name) %><br />
 <% end -%>
 
