--- a/app/views/cpanel/share/_nav.html.haml
+++ b/app/views/cpanel/share/_nav.html.haml
@@ -1,6 +1,7 @@
 .navbar
   .navbar-inner
     %a.brand{:href => "/"} App
+
     %ul.nav
       - Settings.nav.items.each do |i|
         - if i.controller ==  self.controller_name.to_s
@@ -9,3 +10,10 @@
         - else
           %li
             %a{:href => i.link, :style => 'padding:5px;'}= i.cname
+
+    %ul.nav.pull-right
+      - if user_signed_in?
+        %li= link_to I18n.t('sign_out.title'), destroy_user_session_path, :method => :get, :style => 'padding:5px;'
+      - else
+        %li= link_to I18n.t('sign_in.title'), new_user_session_path, :method => :get, :style => 'padding:5px;'
+        %li= link_to I18n.t('sign_up.title'), new_user_registration_path, :method => :get, :style => 'padding:5px;'
