--- a/app/views/share/_nav.html.haml
+++ b/app/views/share/_nav.html.haml
@@ -12,7 +12,10 @@
 
     %ul.nav.pull-right
       - if user_signed_in?
+        - if current_user.try(:admin)
+          %li= link_to I18n.t('cpanel.title'), settings_path, :method => :get, :style => 'padding:5px;'
         %li= link_to I18n.t('sign_out.title'), destroy_user_session_path, :method => :get, :style => 'padding:5px;'
       - else
         %li= link_to I18n.t('sign_in.title'), new_user_session_path, :method => :get, :style => 'padding:5px;'
         %li= link_to I18n.t('sign_up.title'), new_user_registration_path, :method => :get, :style => 'padding:5px;'
+
