--- a/app/views/share/_head.html.haml
+++ b/app/views/share/_head.html.haml
@@ -1,8 +1,9 @@
-%meta{:'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}/
+%meta{:'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
 %meta{:charset => 'utf-8'}
 %meta{:name => 'viewport', :content => 'width=device-width, initial-scale=1.0'}
-%meta{:name => 'keywords', :content => content_for?(:keywords) ? yield(:keywords) : ''}
-%meta{:name => 'description', :content => content_for?(:description) ? yield(:description) : ''}
-%meta{:name => 'author', :content => content_for?(:author) ? yield(:author) : ''}
-%title= content_for?(:title) ? yield(:title) : 'App' 
+%meta{:name => 'keywords', :content => Setting.find_by_name('keywords').try(:value)}
+%meta{:name => 'description', :content => Setting.find_by_name('description').try(:value)}
+%meta{:name => 'author', :content => Setting.find_by_name('author').try(:value)}
+%title= Setting.find_by_name('title').try(:value) 
 = stylesheet_link_tag "application"
+
