--- a/app/views/settings/_form.html.haml
+++ b/app/views/settings/_form.html.haml
@@ -1,19 +1,27 @@
-= form_for @setting do |f|
+= form_for(@setting, :html => {:class => 'form-horizontal'} ) do |f|
   - if @setting.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@setting.errors.count, "error")} prohibited this setting from being saved:"
-      %ul
-        - @setting.errors.full_messages.each do |msg|
-          %li= msg
+    .alert.alert-error
+      %button.close{"data-dismiss" => "alert", :type => "button"} x
+      = I18n.t('errors.messages.not_saved', count: @setting.errors.count)
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :value
-    = f.text_field :value
-  .field
-    = f.label :summary
-    = f.text_field :summary
-  .actions
-    = f.submit 'Save'
+  .control-group{:class => ('error' unless @setting.errors[:name].empty?)}
+    = f.label :name, I18n.t('settings.name'), :class => 'control-label', :style => 'width:80px'
+    .controls{:style => 'margin-left:100px;'}
+      = f.text_field :name, :autofocus => true
+      %span.help-inline= @setting.errors[:name].first unless @setting.errors[:name].empty?
+
+  .control-group{:class => ('error' unless @setting.errors[:value].empty?)}
+    = f.label :value, I18n.t('settings.value'), :class => 'control-label', :style => 'width:80px'
+    .controls{:style => 'margin-left:100px;'}
+      = f.text_area :value, :autofocus => true
+      %span.help-inline= @setting.errors[:value].first unless @setting.errors[:value].empty?
+
+  .control-group{:class => ('error' unless @setting.errors[:summary].empty?)}
+    = f.label :summary, I18n.t('settings.summary'), :class => 'control-label', :style => 'width:80px'
+    .controls{:style => 'margin-left:100px;'}
+      = f.text_area :summary, :autofocus => true
+      %span.help-inline= @setting.errors[:summary].first unless @setting.errors[:summary].empty?
+
+  .control-group
+    .controls{:style => 'margin-left:100px;'}
+      = f.submit I18n.t('settings.submit'), :class => 'btn btn-mini btn-success'
