--- a/app/views/settings/new.html.haml
+++ b/app/views/settings/new.html.haml
@@ -1,5 +1,12 @@
-%h1 New setting
+%ul.breadcrumb
+  %li
+    %a{:href => "/cpanel"}= I18n.t('cpanel.title')
+    %span.divider /
+  %li
+    %a{:href => settings_path}= I18n.t('settings.title')
+    %span.divider /
+  %li.active= I18n.t('common.new')
 
 = render 'form'
 
-= link_to 'Back', settings_path
+= link_to I18n.t('common.back'), settings_path
