--- a/app/views/share/_nav.html.haml
+++ b/app/views/share/_nav.html.haml
@@ -1,6 +1,6 @@
 .navbar
   .navbar-inner
-    %a.brand{:href => "/"} App
+    %a.brand{:href => "/"}= Setting.find_by_name('site_name').try('value')
     %ul.nav
       - Settings.fnav.items.each do |i|
         - if i.controller ==  self.controller_name.to_s
