--- a/app/views/sections/_form.html.haml
+++ b/app/views/sections/_form.html.haml
@@ -13,7 +13,7 @@
   .control-group{:class => ('error' unless @section.errors[:sort].empty?)}
     = f.label :sort, I18n.t('sections.sort'), :class => 'control-label', :style => 'width:80px'
     .controls{:style => 'margin-left:100px;'}
-      = f.text_field :sort, :autofocus => true
+      = f.number_field :sort, :autofocus => true
       %span.help-inline= @section.errors[:sort].first unless @section.errors[:sort].empty?
 
   .control-group{:class => ('error' unless @section.errors[:summary].empty?)}
