--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,7 +1,7 @@
 .home-wrapper{
   .head{
     font-weight:normal;
-    font-size:21px;
+    font-size:18px;
     color:#444;
     margin:10px;
   }
@@ -86,7 +86,7 @@
         margin:10px;
         img{
           width:80px;
-          margin:2px;
+          margin:2px 0 0 2px;
         }
       }
     }
