--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     .header.typo
       = render 'share/nav'
     .body.typo
+      = render 'share/sidebar'
       = yield
     .footer
       = render 'share/footer'
