--- a/app/views/share/_head.html.haml
+++ b/app/views/share/_head.html.haml
@@ -4,6 +4,8 @@
 %meta{:name => 'keywords', :content => Setting.find_by_name('keywords').try(:value)}
 %meta{:name => 'description', :content => Setting.find_by_name('description').try(:value)}
 %meta{:name => 'author', :content => Setting.find_by_name('author').try(:value)}
+%link{:href => "/favicon.ico", :rel => "icon", :type => "image/x-icon"}/
+%link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}/
 %title= Setting.find_by_name('title').try(:value) 
 = stylesheet_link_tag "application"
 = csrf_meta_tag
