--- a/app/views/cpanel/ads/index.html.haml
+++ b/app/views/cpanel/ads/index.html.haml
@@ -10,7 +10,7 @@
     %th= I18n.t('cpanel_ads.position')
     %th= I18n.t('cpanel_ads.height')
     %th= I18n.t('cpanel_ads.width')
-    %th= I18n.t('cpanel_ads.url')
+    %th= I18n.t('cpanel_ads.code')
     %th= I18n.t('cpanel_ads.description')
     %th= I18n.t('cpanel_ads.is_displayed')
     %th
@@ -20,7 +20,7 @@
       %td= cpanel_ad.position
       %td= cpanel_ad.height
       %td= cpanel_ad.width
-      %td= cpanel_ad.url
+      %td= cpanel_ad.code
       %td= cpanel_ad.description
       %td= cpanel_ad.is_displayed
       %td
