--- a/app/views/cpanel/attachments/show.html.haml
+++ b/app/views/cpanel/attachments/show.html.haml
@@ -15,6 +15,6 @@
     %th= I18n.t('cpanel_attachment.file')
     %td= @cpanel_attachment.file
   
-= link_to I18n.t('common.edit'), edit_cpanel_attachment_path(cpanel_attachment)
+= link_to I18n.t('common.edit'), edit_cpanel_attachment_path(@cpanel_attachment)
 \|
 = link_to I18n.t('common.back'), cpanel_attachments_path
