--- a/app/views/share/_nav.html.haml
+++ b/app/views/share/_nav.html.haml
@@ -3,9 +3,9 @@
     %a{:href => '/'}
       %img{:src => '/logo.png'}
   .nav
-    %a.node.active{:href => 'javascript:vold(0)'} 导航
-    %a.node{:href => 'javascript:vold(0)'} 导航
-    %a.node{:href => 'javascript:vold(0)'} 导航
+    /%a.node.active{:href => 'javascript:vold(0)'} 导航
+    /%a.node{:href => 'javascript:vold(0)'} 导航
+    /%a.node{:href => 'javascript:vold(0)'} 导航
   .search
     %input{:type => 'text', :name => 'q'}
     %button{:type => 'submit'}
