--- a/app/views/share/_sidebar.html.haml
+++ b/app/views/share/_sidebar.html.haml
@@ -8,3 +8,7 @@
         %a.active.section{:href => "/section/#{s.name}"}= s.name
       - else
         %a.section{:href => "/section/#{s.name}"}= s.name
+
+.ads{:style => 'clear:both;position:fixed;top:380px;margin-left:-130px;'}
+  - unless @ad_home_left_bottom.nil?
+    #ad_home_left_bottom{:style => "overflow:hidden;width:#{@ad_home_left_bottom.try(:width)}px;height:#{@ad_home_left_bottom.try(:height)}px"}= @ad_home_left_bottom.try(:code).html_safe
