--- a/app/views/cpanel/promotions/show.html.haml
+++ b/app/views/cpanel/promotions/show.html.haml
@@ -9,21 +9,21 @@
 
 %table.table.table-condensed.table-bordered.table-hover
   %tr
-    %th= I18n.t('cpanel_promotion.Title')
+    %th= I18n.t('cpanel_promotions.title')
     %td= @cpanel_promotion.title
   %tr
-    %th= I18n.t('cpanel_promotion.Url')
+    %th= I18n.t('cpanel_promotions.url')
     %td= @cpanel_promotion.url
   %tr
-    %th= I18n.t('cpanel_promotion.Mall')
+    %th= I18n.t('cpanel_promotions.mall')
     %td= @cpanel_promotion.mall_id
   %tr
-    %th= I18n.t('cpanel_promotion.Content')
+    %th= I18n.t('cpanel_promotions.content')
     %td= @cpanel_promotion.content
   %tr
-    %th= I18n.t('cpanel_promotion.Order')
+    %th= I18n.t('cpanel_promotions.order')
     %td= @cpanel_promotion.order
   
-= link_to I18n.t('common.edit'), edit_cpanel_promotion_path(cpanel_promotion)
+= link_to I18n.t('common.edit'), edit_cpanel_promotion_path(@cpanel_promotion)
 \|
 = link_to I18n.t('common.back'), cpanel_promotions_path
